<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="?attr/background"
    tools:context=".view.details.DetailsStoryActivity">

    <ImageView
        android:id="@+id/ivdetail"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:scaleType="centerCrop"
        tools:src="@tools:sample/avatars"
        android:transitionName="image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/story_photo" />

    <TextView
        android:id="@+id/tvname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:textStyle="bold"
        android:text="@string/name"
        android:transitionName="name"
        android:textColor="?attr/colorSecondary"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivdetail" />

    <TextView
        android:id="@+id/tvdetail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/description"
        android:textSize="18sp"
        android:transitionName="description"
        android:textColor="?attr/colorSecondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvname" />

</androidx.constraintlayout.widget.ConstraintLayout>
