<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background"
    tools:context=".view.upload.UploadActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progressIndicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/previewImageView"
            android:layout_width="400dp"
            android:layout_height="400dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/cameraButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_place_holder"
            android:contentDescription="@string/story_photo" />

        <Button
            android:id="@+id/cameraButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:paddingHorizontal="50dp"
            android:text="@string/camera"
            android:backgroundTint="?attr/colorPrimary"
            android:textColor="@color/white"
            app:layout_constraintEnd_toStartOf="@+id/galleryButton"
            app:layout_constraintStart_toStartOf="@+id/previewImageView"
            app:layout_constraintTop_toBottomOf="@+id/previewImageView" />

        <Button
            android:id="@+id/galleryButton"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:elevation="2dp"
            android:paddingHorizontal="50dp"
            android:scaleType="fitCenter"
            android:text="@string/gallery"
            android:backgroundTint="?attr/colorPrimary"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/previewImageView"
            app:layout_constraintHorizontal_bias="0.642"
            app:layout_constraintStart_toEndOf="@+id/cameraButton"
            app:layout_constraintTop_toBottomOf="@+id/previewImageView" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/descriptionEditTextLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="16dp"
            android:alpha="1"
            android:hint="@string/description_placeholder"
            android:textColorHint="?attr/colorSecondary"
            app:layout_constraintBottom_toTopOf="@+id/uploadButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cameraButton"
            tools:alpha="100">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/descriptionEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:inputType="textMultiLine"
                tools:ignore="SpeakableTextPresentCheck" />

            <CheckBox
                android:id="@+id/locationCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_my_location" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/uploadButton"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="80dp"
            android:text="@string/upload"
            android:backgroundTint="?attr/colorPrimary"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descriptionEditTextLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
